-- Active: 1742912045376@@127.0.0.1@5432@spring_mvc_lib_mang_v2
-- ============================================================
-- Flyway V0 Baseline
-- Existing LMS schema before Flyway-managed changes
-- ============================================================

-- ============================================================
-- BOOK
-- ============================================================

CREATE TABLE public.book (
    id BIGINT NOT NULL,
    author VARCHAR(255) NOT NULL,
    available_copy INTEGER NOT NULL,
    is_active BOOLEAN NOT NULL,
    name VARCHAR(255) NOT NULL,
    total_copies INTEGER NOT NULL,
    CONSTRAINT book_pkey PRIMARY KEY (id),
    CONSTRAINT uk_book_name_author UNIQUE (name, author)
);

ALTER TABLE public.book
    ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.book_id_seq
        START WITH 1
        INCREMENT BY 1
        NO MINVALUE
        NO MAXVALUE
        CACHE 1
    );


-- ============================================================
-- MEMBER
-- ============================================================

CREATE TABLE public.member (
    id BIGINT NOT NULL,
    age INTEGER NOT NULL,
    email VARCHAR(255) NOT NULL,
    is_active BOOLEAN NOT NULL,
    name VARCHAR(255) NOT NULL,
    role VARCHAR(255) NOT NULL,

    CONSTRAINT member_pkey PRIMARY KEY (id),
    CONSTRAINT uk_member_email UNIQUE (email),

    CONSTRAINT member_role_check
        CHECK (
            role IN ('MEMBER', 'ADMIN', 'LIBRARIAN')
        )
);

ALTER TABLE public.member
    ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.member_id_seq
        START WITH 1
        INCREMENT BY 1
        NO MINVALUE
        NO MAXVALUE
        CACHE 1
    );


-- ============================================================
-- USERS
-- ============================================================

CREATE TABLE public.users (
    id BIGINT NOT NULL,
    email VARCHAR(255) NOT NULL,
    is_active BOOLEAN NOT NULL,
    password VARCHAR(255),
    role VARCHAR(255) NOT NULL,
    username VARCHAR(255) NOT NULL,

    CONSTRAINT users_pkey PRIMARY KEY (id),
    CONSTRAINT uk_users_email UNIQUE (email),
    CONSTRAINT uk_users_username UNIQUE (username),

    CONSTRAINT users_role_check
        CHECK (
            role IN ('MEMBER', 'ADMIN', 'LIBRARIAN')
        )
);

ALTER TABLE public.users
    ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.users_id_seq
        START WITH 1
        INCREMENT BY 1
        NO MINVALUE
        NO MAXVALUE
        CACHE 1
    );


-- Hibernate sequence used by the application
CREATE SEQUENCE public.users_seq
    START WITH 1
    INCREMENT BY 50
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;


-- ============================================================
-- LIBRARY SETTINGS
-- ============================================================

CREATE TABLE public.library_settings (
    id BIGINT NOT NULL,
    description VARCHAR(255),
    setting_key VARCHAR(255) NOT NULL,
    setting_value VARCHAR(255) NOT NULL,
    updated_at TIMESTAMP(6) WITHOUT TIME ZONE NOT NULL,
    value_type VARCHAR(255) NOT NULL,

    CONSTRAINT library_settings_pkey PRIMARY KEY (id),
    CONSTRAINT uk_library_settings_key UNIQUE (setting_key),

    CONSTRAINT library_settings_setting_key_check
        CHECK (
            setting_key IN (
                'MAX_BOOKS',
                'MAX_BORROW_DAYS',
                'FINE_PER_DAY'
            )
        ),

    CONSTRAINT library_settings_value_type_check
        CHECK (
            value_type IN (
                'STRING',
                'INTEGER',
                'BOOLEAN',
                'DECIMAL'
            )
        )
);

ALTER TABLE public.library_settings
    ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.library_settings_id_seq
        START WITH 1
        INCREMENT BY 1
        NO MINVALUE
        NO MAXVALUE
        CACHE 1
    );


-- ============================================================
-- BORROW TRANSACTION
-- ============================================================

CREATE TABLE public.borrow_transaction (
    id BIGINT NOT NULL,
    borrow_date TIMESTAMP(6) WITHOUT TIME ZONE NOT NULL,
    member_id BIGINT NOT NULL,

    CONSTRAINT borrow_transaction_pkey PRIMARY KEY (id)
);

ALTER TABLE public.borrow_transaction
    ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.borrow_transaction_id_seq
        START WITH 1
        INCREMENT BY 1
        NO MINVALUE
        NO MAXVALUE
        CACHE 1
    );


-- ============================================================
-- BORROW RECORD
-- ============================================================

CREATE TABLE public.borrow_record (
    id BIGINT NOT NULL,
    due_date TIMESTAMP(6) WITHOUT TIME ZONE NOT NULL,
    fine NUMERIC(38,2),
    return_date TIMESTAMP(6) WITHOUT TIME ZONE,
    book_id BIGINT NOT NULL,
    borrow_transaction_id BIGINT NOT NULL,

    CONSTRAINT borrow_record_pkey PRIMARY KEY (id)
);

ALTER TABLE public.borrow_record
    ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.borrow_record_id_seq
        START WITH 1
        INCREMENT BY 1
        NO MINVALUE
        NO MAXVALUE
        CACHE 1
    );


-- ============================================================
-- REFRESH TOKEN
-- ============================================================

CREATE TABLE public.refresh_token (
    id BIGINT NOT NULL,
    created_at TIMESTAMP(6) WITH TIME ZONE NOT NULL,
    expires_at TIMESTAMP(6) WITH TIME ZONE NOT NULL,
    jti VARCHAR(255) NOT NULL,
    revoked BOOLEAN NOT NULL,
    user_id BIGINT NOT NULL,

    CONSTRAINT refresh_token_pkey PRIMARY KEY (id),
    CONSTRAINT uk_refresh_token_jti UNIQUE (jti)
);

ALTER TABLE public.refresh_token
    ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.refresh_token_id_seq
        START WITH 1
        INCREMENT BY 1
        NO MINVALUE
        NO MAXVALUE
        CACHE 1
    );


-- ============================================================
-- FOREIGN KEYS
-- ============================================================

ALTER TABLE public.borrow_transaction
    ADD CONSTRAINT fk_borrow_transaction_member
    FOREIGN KEY (member_id)
    REFERENCES public.member(id);


ALTER TABLE public.borrow_record
    ADD CONSTRAINT fk_borrow_record_book
    FOREIGN KEY (book_id)
    REFERENCES public.book(id);


ALTER TABLE public.borrow_record
    ADD CONSTRAINT fk_borrow_record_transaction
    FOREIGN KEY (borrow_transaction_id)
    REFERENCES public.borrow_transaction(id);


ALTER TABLE public.refresh_token
    ADD CONSTRAINT fk_refresh_token_user
    FOREIGN KEY (user_id)
    REFERENCES public.users(id);